--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,20 +2,25 @@
 layout: default
 ---
 
+<h1> Vulnerability Research </h1>
+<br>
+
 <article class="post">
   {% if page.categories %}
-    <div class="post-categories">
-      {% for category in page.categories %}
-        <span class="category">{{ category }}</span>
-      {% endfor %}
-    </div>
+    
+      <div class="post-categories">
+        {% for category in page.categories %}
+          <span class="category">{{ category }}</span>
+        {% endfor %}
+      </div>
+
+      <h1 class="post-title">{{ page.title }}</h1>
+
+      <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
+
+      {{ content }}
+
   {% endif %}
-
-  <h1 class="post-title">{{ page.title }}</h1>
-
-  <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
-
-  {{ content }}
 </article>
 
 {% if site.related_posts != empty %}
@@ -23,12 +28,16 @@ layout: default
     <h3>Related posts</h3>
     <ul class="related-posts">
       {% for post in site.related_posts limit:3 %}
-        <li>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            {{ post.title }}
-            <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
-          </a>
-        </li>
+        {% if post.categories %}
+  
+            <li>
+              <a href="{{ site.baseurl }}{{ post.url }}">
+                {{ post.title }}
+                <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
+              </a>
+            </li>
+
+        {% endif %}
       {% endfor %}
     </ul>
   </aside>
