--- a/_layouts/Coding.html
+++ b/_layouts/Coding.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 
-<article class="post">
+<article class="Coding">
 
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="Coding-title">{{ Coding.title }}</h1>
 
-    <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date_to_string }}</time>
+    <time datetime="{{ Coding.date | date_to_xmlschema }}" class="Coding-date">{{ Coding.date | date_to_string }}</time>
 
     {{ content }}
 
@@ -20,8 +20,8 @@ layout: default
   
           <li>
             <a href="{{ site.baseurl }}{{ post.url }}">
-              {{ post.title }}
-              <small><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time></small>
+              {{ Coding.title }}
+              <small><time datetime="{{ Coding.date | date_to_xmlschema }}">{{ Coding.date | date_to_string }}</time></small>
             </a>
           </li>
 
